# WakeWord

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
audio_preprocessor/: CMakeLists.txt  audio_preprocessor.cpp  audio_preprocessor.h
components/audio_preprocessor/: CMakeLists.txt
components/audio_preprocessor/include/: audio_preprocessor.h
components/audio_preprocessor/src/: audio_preprocessor.cpp  fft_util.cpp  fft_util.h  mel_filterbank.cpp  mel_filterbank.h
components/model/: CMakeLists.txt
components/model/include/: model_data.h  model_runner.h
components/model/src/: model_data.cc  model_runner.cpp
main/: CMakeLists.txt  audio_task.cpp  audio_task.h  hellum_types.h  idf_component.yml  led_manager.cpp  led_manager.h  main.cpp  network_task.cpp  network_task.h
model/: CMakeLists.txt  model_runner.h
ring_buffer/: CMakeLists.txt  ring_buffer.cpp  ring_buffer.h
tools/: convert_model.sh
